# OmniAgent

./: .gitignore  README.md  pyproject.toml
Rag-system/: build_vector_db_from_records.py  extract-parameters-handheld.mjs  extract-parameters.mjs  generate_rag_records.py  merge_config_2.0.py  merge_config_frs.py  query_rag.py  requirements.txt  run.txt
Rag-system/data4xml/: config_Magellan-1500i_DR9401843.json  config_Magellan-900i_DR9401800.json
Rag-system/merged_data4xml/: config_Magellan-1500i_DR9401843.json  config_Magellan-900i_DR9401800.json  config_Powerscan-PD9630_610149566.json
simple-multimodal-rag/: config.py  indexer.py  list_gemini_models.py  main.py  parser.py  query.py  requirements.txt
src/: main.py
src/agent/: graph.py  state.py
src/agent/nodes/: node.py  root-agent.py
src/agent/prompts/: Instructions.py  systemp_prompt.py
src/agent/tools/: remote_tool.py  tool.py
src/agent/tools/sub_agent/: RAG.py  action_agent.py  llm.py  state.py  sub_tool.py
src/agent/tools/web_search/: client.py  schema.py
src/api/: app.py
src/api/websocket/: connection_manager.py  handler.py  models.py  pending_manager.py
src/config/: llm.py  settings.py
src/rag/: evaluator.py  reading_parameter_pipeline.py
