[project]
name = "ai-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.139.0",
    "uvicorn[standard]>=0.49.0",
    "langgraph>=0.3.0",         
    "langchain>=0.3.0",
    "google-generativeai>=0.8.0", 
    "python-dotenv>=1.2.2",
    "numpy>=1.26.0",            
    "faiss-cpu>=1.8.0",         
    "rank-bm25>=0.2.2",         
    "sentence-transformers>=3.0.0", 
]

[tool.pyright]
extraPaths = ["."]

